Changelog:
0.5.0 (in progress):
- Changed heading mixins to not use line-height for whitespace since that breaks strangely on responsive layout.
- Added `view_name` helper method for semantic CSS namespacing.

0.4.3:
- Changed Heading styles to default to 'inherit' instead of a specific color.
- Tiny adjustment to button styles to make them line up better.
- Added description to gemspec.

0.4.2:
- Typo correction... pushed 0.4.1 too soon!

0.4.1:
- Changed Typography module as follows:
  > Created mixins for headings instead of definitions.
  > For backward compatibility I also updated the default definitions to use the new mixins.
+ Note: This is the direction the library is going to go: Mixins > Definitions. My
  eventual goal is to get most or even all of the defitions extracted to their own seperate
  module so users have the option of only including the mixins they want without any other
  styles getting in the way.

0.4.0:
- Major upgrade to Fractionalize module, with the following results:
  > Standard containers are now 1000px wide instead of 960.
  > The layout now uses media queries to respond to three different dimensions:
    - Desktop (More than 1023px wide)
    - Tablet (From 768 to 1023px wide)
    - Mobile (Less than 768px wide)
    The tablet version is just a slightly compressed layout. The mobile version becomes
    one-column.
  > Margins are now fixed at 20px throughout, instead of variable based on the number of columns.
- Corrected Sass Gem dependency to use any version after 3.1.x.

0.3.2:
- Made input widths more intuitive in stacked forms
- Adjusted style so hint spans in forms do not have to be contained in an input div.

0.3.1:
- Fix for check box and radio button definitions, plus supporting simple_form by default.
- Minor fix on table styles and active button styles.

0.3.0:
- Added Kaminari-style pagination.
- Added simple_form style collection check and radio label styles.

0.2.2: