@@ -1,3 +1,3 @@
 module Jetpack
-	VERSION = "0.5.0.beta2"
+	VERSION = "0.5.0.beta3"
 end
